--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,32 @@
 Look into ChangeLog file for full list of changes.
 
+0.8.6a - 0.8.7
+  This release introduces binary incompatibilities with 0.8.6a.
+
+  Incompatibilities:
+    * Binary compatibility with previous releases broken.
+    * Unit test require Boost 1.34. Sorry, I have no enough mana to
+      maintain different boost branches for unit tests.
+    * The to_xml method of Request and Response classes became private.
+      Use new dump_xml functions that do not depend on XML parser library.
+
+  Enhancements:
+    * Now users able to construct/parse raw XML-RPC requests/responses
+      by them-selves in order to achieve higher level of customization
+      abilities.
+    * Add support for GCC visibility "hidden" option.
+
+  Fixes:
+    * Error handling: http::Error_response now has response_header method
+      so one will able find out HTTP error code and other information.
+    * Hide most of implementation details of Value class. This change
+      addresses binary incompatibilities issues.
+    * Fix warning in headers during compilation by MSVC.
+
+  Documentation:
+    * New users guide added (still incomplete). Guide in a format of deplate.
+      See http://deplate.sourceforge.net
+
 0.8.6 - 0.8.6a
   * Fix undefined behavior in Pool_executor, introduced in 0.8.6.
   * Fix undefined behavior in http module built with MSVC 8.
