--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,14 @@
 Look into ChangeLog file for full list of changes.
 
+0.8.10 - 0.9.0
+  This realease is binary incompatible with previous ones!
+
+  * Firewall now sends HTTP 403 Forbidden as a default reject action.
+  * Icrease buffer size for hostname calculations (thanks to Ryan Bryan).
+  * Fix hang in client during connection to server that rejects connections on specific port.
+  * Fix coredump in case if name of struct member contains XML tags.
+  * API enhancments: Http_server and Https_server allow binding to specific IP, not only port.
+
 0.8.9 - 0.8.10
   * Client_base::set_timeout now affects connection process too.
   * Fix compatibility with xmlrpc++: do not throw error on absent
