--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 Look into ChangeLog file for full list of changes.
 
+0.12 - 0.12.1
+  * Fix parser behavior on systems with libxml2 <= 2.6.16.
+  * Send "HTTP/1.1 100" only once on long/framed requests.
+  * Fix compilation warnings on Unices.
+
 0.11.1 - 0.12
   API Changes:
     * New Struct::find and Struct::erase methods
