--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Look into ChangeLog file for full list of changes.
 
+0.12.1 - 0.12.2
+  * Fix build out of source tree.
+
 0.12 - 0.12.1
   * Fix parser behavior on systems with libxml2 <= 2.6.16.
   * Send "HTTP/1.1 100" only once on long/framed requests.
