--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Look into ChangeLog file for full list of changes.
 
+0.12.5 - 0.12.6
+Fix parsing errors for string/binary nodes > 10Mb.
+
 0.12.4 - 0.12.5
 Add support for SSL connections verification. There is possibility to verify
 client or server certificates natively by OpenSSL. Optionally one can implement
