--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Look into ChangeLog file for full list of changes.
 
+0.13.1 - 0.13.2
+Compilatibility: Ignore XML namespaces in request's tag names.
+
 0.13 - 0.13.1
 Stability: fix socket leakage in client when connection process is timed out.
 
