--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Look into ChangeLog file for full list of changes.
 
+0.13.3 - 0.13.4
+Fix compilation on Windows when OpenSSL 1.0.2 is used.
+
 0.13.2 - 0.13.3
 Remove reduntant socket close in client connection.
 
