--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Look into ChangeLog file for full list of changes.
 
+0.13.7 - 0.13.8
+ * Support for <i8>, a 64-bit integer XML-RPC extension
+
 0.13.6 - 0.13.7
   * Fix conditional jump or move depends on uninitialised value
 
