Update copyright attribution to reflect fork contributions
Add dual copyright attribution to License file and 34 substantially
modified source files to reflect contributions made since 2019 while
maintaining the original BSD 2-Clause license.

Changes:
- License: Add Yaroslav Gorbunov copyright (2019-2026) alongside
  Anton Dedov's original copyright (2011)
- README: Document fork relationship and both contributors
- Source files: Add copyright line to files with substantial
  modifications based on git history analysis

All changes preserve the BSD 2-Clause license terms unchanged.
This attribution update is legally compliant with the original
license and accurately reflects the contribution history.

Files updated:
- Performance optimizations: value_type, http, http_client,
  https_client, xheaders, xml_builder, num_conv, reactor_impl
- SSL/security: ssl_lib, ssl_connection
- Core infrastructure: safe_math, server, value, executor,
  dispatcher_manager, parser2, inet_addr, util, client,
  server_conn, http_server

Tests: All 16 tests pass (22.6s)

--- a/README
+++ b/README
@@ -1,6 +1,20 @@
 Thank you for trying Libiqxmlrpc.
 
+This is a fork of Anton Dedov's original libiqxmlrpc project, maintained and
+enhanced by Yaroslav Gorbunov since 2019.
+
 Please refer documentation on project's wiki:
 	https://github.com/adedov/libiqxmlrpc/wiki
 
-Anton Dedov <adedov@gmail.com>
+## Contributors
+
+Original author:
+  Anton Dedov <adedov@gmail.com>
+
+Fork maintainer and contributor (2019-2026):
+  Yaroslav Gorbunov <ygorbunov@gmail.com>
+
+## License
+
+This project is licensed under the BSD 2-Clause License.
+See the License file for details.
