Add fork-specific wiki documentation
Creates minimal wiki (5 pages) focused on fork differentiators:
- Home: Fork overview with comparison table and navigation hub
- Quick Start: 5-minute guide with troubleshooting section
- Building: Updated C++17/OpenSSL 1.1.0+ requirements with verification
- Performance Results: 28 optimizations (1.2x-12.5x speedups) with guidance
- What's New: Migration guide with C++17 rationale and checklist

Updates README to direct users to fork wiki first, with upstream
as reference for stable content (Value API, Client/Server guides).

Includes WIKI_SETUP_INSTRUCTIONS.md for publication process.

Changes:
- README: +8/-2 lines (documentation links)
- New files: 6 files, 814 lines of documentation

Co-authored-by: Code review improvements applied

--- a/README
+++ b/README
@@ -3,8 +3,13 @@ Thank you for trying Libiqxmlrpc.
 This is a fork of Anton Dedov's original libiqxmlrpc project, maintained and
 enhanced by Yaroslav Gorbunov since 2019.
 
-Please refer documentation on project's wiki:
-	https://github.com/adedov/libiqxmlrpc/wiki
+## Documentation
+
+**Fork Documentation** (Recommended):
+- https://github.com/yarikmsu/libiqxmlrpc/wiki
+
+**Original Documentation** (Some content outdated):
+- https://github.com/adedov/libiqxmlrpc/wiki
 
 ## Contributors
 
