Fix Struct::insert() ambiguity when called with literal 0
In 0.14.0, Value_ptr changed from a copyable type to std::unique_ptr<Value>,
which is constructible from nullptr. The literal 0 is both an int and a null
pointer constant, causing overload ambiguity between insert(Value_ptr) and
insert(const Value&) when users call insert("key", 0).

This broke backward compatibility for code upgrading from 0.13.8 that
used insert() with integer literals.

Fix by using SFINAE to constrain the Value_ptr overload to only match
actual unique_ptr<Value> types, not integers or nullptr.

--- a/NEWS
+++ b/NEWS
@@ -45,6 +45,7 @@ Look into ChangeLog file for full list of changes.
     * Benchmark CI for performance regression detection (>20% threshold)
 
   Bug Fixes:
+    * Fix Struct::insert() ambiguity when called with literal 0 (regression from 0.13.8)
     * Fix exception safety in value parser (Coverity CID 641344)
     * Fix socket FD leak in firewall rejection path (Coverity CID 641369)
     * Fix undefined behavior in Base64 encoding for signed char platforms
