refactor: Return unique_ptr from do_process_session()
Change the protected virtual method do_process_session() to return
std::unique_ptr<http::Packet> instead of a raw http::Packet*.
This makes ownership transfer explicit in the type system and
eliminates the .release() / immediate-recapture pattern at call sites.

Breaking API change for downstream subclasses of Client_connection.

- Update all 3 override sites (Http, Https, Https_proxy)
- Update SslConnectionFactory callback type and test lambdas
- Add resp_packet.reset() after setup_tunnel() to clear stale
  tunnel response before SSL session
- Update README compatibility claim

Follow-up to #243 which converted resp_packet members to unique_ptr.
Closes #242.

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ This is a performance-focused fork of Anton Dedov's libiqxmlrpc, actively mainta
 ⚡ **28 performance optimizations** delivering 1.2x to 12.5x speedups on critical operations
 🚀 **Modern C++17** with `string_view`, `to_chars`, and safe integer operations
 🔒 **Enhanced security** with TLS 1.2+, overflow protection, and fuzzing infrastructure
-📦 **Drop-in compatible** with upstream - no breaking API changes
+📦 **Drop-in compatible** with upstream for most use cases (see Doxygen `\note` tags for breaking changes since 0.14.0)
 
 ## Quick Start
 
